# lli-saas

./: .gitignore  .mc-workspace.json  .prettierignore  Land Legacy Intelligence.md  Makefile  Phase-by-Phase Planning.md  README.md
.codex/: implementation-journal.md
.github/workflows/: crm-adapter-ci.yml  infra-ci.yml  lead-engine-ci.yml  pilot-release-gate.yml  user-portal-ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-scaffold/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-UAT.md
.planning/phases/02-reaper-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-monday-delivery-flow/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-pilot-operations/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md
docs/: PRD.md  README.md  credential-setup.md  data-intake-api.md  developer-onboarding.md  documentation-standards.md  engineering-standards.md  obituary-name-matching-implementation-note.md  pilot-deploy-runbook.md  pilot-release-checklist.md  pilot-runbook-david-whitaker.md  system-architecture.md
docs/adr/: 0001-helm-is-deploy-source-of-truth.md  README.md
docs/archive/legacy/: Land Legacy Intelligence.md  PLANS.md  Phase-by-Phase Planning.md  Plan and Recommendations.md  README.md
docs/source/: Plan and Recommendations.md
infra/: .env.example  README.md
infra/charts/lli-saas/: Chart.yaml  values.pilot.example.yaml  values.yaml
infra/k8s-reference/: README.md
infra/k8s-reference/crm-adapter/: persistentvolumeclaim.yaml  service.yaml
infra/k8s-reference/lead-engine/: cronjob.yaml  deployment.yaml  service.yaml
infra/k8s-reference/obituary-intelligence-engine/: deployment.yaml  persistentvolumeclaim.yaml
infra/k8s-reference/user-portal/: deployment.yaml  service.yaml
infra/k8s/crm-adapter/: deployment.yaml
infra/k8s/lead-engine/: cronjob.yaml  deployment.yaml  hpa.yaml
infra/k8s/obituary-intelligence-engine/: deployment.yaml  hpa.yaml  service.yaml
infra/k8s/user-portal/: deployment.yaml
scripts/: capture-pilot-evidence.sh  check-contracts.py  check-credentials.sh  deploy-pilot.sh  pilot-readiness-check.sh  prove-local-obituary-scan.py  rollback-pilot.sh  validate-obituary-sources.py
services/crm-adapter/: .env.example  Dockerfile  README.md  developer-portal.html  eslint.config.cjs  openapi.json  package-lock.json  package.json  vitest.config.js
services/crm-adapter/examples/: submit_lead.mjs  submit_lead.py
services/crm-adapter/src/: app.js  auth.js  internalLead.js  leadContract.js  logger.js  mondayClient.js  mondayValidation.js  ownerRecord.js  profiler.js  profilingConfig.js  queries.js  server.js  (+2 more)
services/lead-engine/: .env.example  Dockerfile  README.md  pyproject.toml
services/lead-engine/src/: app.py  auth.py  contracts.py  crm_adapter.py  logging.py  reaper.py  scan_service.py
services/lead-engine/src/obituary_engine/: __init__.py
services/lead-engine/src/owner_corpus/: __init__.py
services/lead-engine/tests/: test_app.py
services/obituary-intelligence-engine/: .env.example  Dockerfile  README.md  nicknames.csv  pyproject.toml
services/obituary-intelligence-engine/src/: app.py  collector.py  contracts.py  extractor.py  feed_sources.py  matcher.py  normalization.py  service.py  state_store.py
services/obituary-intelligence-engine/tests/: test_modules.py
services/user-portal/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
shared/contracts/: internal-lead.schema.json  lead.schema.json  owner-record.schema.json  scan-result.schema.json
(+33 files in other folders)
