[tool.poetry]
name = "lead-engine"
version = "0.1.0"
description = "Phase 1 FastAPI scaffold for lli-saas lead engine"
authors = ["nice-and-precise"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
httpx = "^0.28.1"
uvicorn = { extras = ["standard"], version = "^0.34.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
