[tool.poetry]
name = "lead-engine"
version = "0.1.0"
description = "Phase 1 FastAPI scaffold for lli-saas lead engine"
authors = ["nice-and-precise"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
httpx = "^0.28.1"
uvicorn = { extras = ["standard"], version = "^0.34.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.15.5"
mypy = "^1.19.1"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/app.py" = ["B008"]
"tests/test_app.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
