[tool.poetry]
name = "obituary-intelligence-engine"
version = "0.1.0"
description = "Iowa obituary intelligence service for lli-saas"
authors = ["nice-and-precise"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
beautifulsoup4 = "^4.12.3"
feedparser = "^6.0.11"
google-genai = "^1.8.0"
anthropic = "^0.49.0"
lxml = "^5.3.1"
nameparser = "^1.1.3"
rapidfuzz = "^3.11.0"
requests = "^2.32.3"
scrapling = "^0.2.96"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.15.5"
mypy = "^1.19.1"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["data"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/app.py" = ["B008"]
"src/extractor.py" = ["E501"]
"tests/test_modules.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
  "anthropic",
  "anthropic.*",
  "bs4",
  "bs4.*",
  "feedparser",
  "feedparser.*",
  "google",
  "google.*",
  "nameparser",
  "nameparser.*",
  "requests",
  "requests.*",
  "scrapling",
  "scrapling.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
